[gd_scene load_steps=4 format=3 uid="uid://dy0q60vlkv5xb"]

[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/common_components/debug/debugit.gd" id="1_4pexd"]
[ext_resource type="Theme" uid="uid://ch4j3053qj2bo" path="res://addons/jaysreusablecomponentsandthings/assets/theme/debugit_theme.tres" id="1_upi3j"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/common_components/debug/inspector/inspector.gd" id="2_c1qnf"]

[node name="DebugIt" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_upi3j")
script = ExtResource("1_4pexd")

[node name="Window" type="Window" parent="."]
title = "DebugIt ðŸ¤–"
position = Vector2i(0, 36)
visible = false
wrap_controls = true

[node name="TabContainer" type="TabContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
current_tab = 0

[node name="Debug" type="FlowContainer" parent="Window/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Inspector" type="Tree" parent="Window/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_c1qnf")
metadata/_tab_index = 1

[node name="System Monitor" type="Panel" parent="Window/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="focus_exited" from="Window" to="." method="_on_window_focus_exited"]
[connection signal="visibility_changed" from="Window" to="." method="_on_window_visibility_changed"]
[connection signal="window_input" from="Window" to="." method="_on_window_window_input"]
[connection signal="button_clicked" from="Window/TabContainer/Inspector" to="Window/TabContainer/Inspector" method="_on_button_clicked"]
[connection signal="item_edited" from="Window/TabContainer/Inspector" to="Window/TabContainer/Inspector" method="_on_item_edited"]
[connection signal="item_selected" from="Window/TabContainer/Inspector" to="Window/TabContainer/Inspector" method="_on_item_selected"]
